fixed overflow behavior of menu info

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,6 +62,7 @@
                 @include textEllipsis;
                 flex: 0 2 auto;
                 max-width: 75%;
+                overflow: hidden;
             }
             .price__menu{
                 font-weight: 700;
